6.Backend/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /(.*) 
        pathType: Prefix
        backend:
          service: 
            name: backend
            port:
              number: 30100
